# arbi

./: Cargo.toml  README.md
.github/workflows/: docs.yml  examples.yml  static.yml  test.yml
arbi/: Cargo.toml  README.md
arbi/.cargo/: config.toml
arbi/doc/: header.html
arbi/scripts/: size_in_radix.py
arbi/src/: add.rs  assign.rs  assign_double.rs  assign_integral.rs  assign_string.rs  base.rs  bit_length.rs  bits.rs  bitwise.rs  capacity.rs  comparisons.rs  comparisons_double.rs  comparisons_integral.rs  display.rs  division.rs  doc.rs  exponentiation.rs  fits.rs  floor.rs  from_double.rs  from_integral.rs  from_string.rs  gcd.rs  increment_decrement.rs  invert.rs  is_odd_is_even.rs  is_signed.rs  is_zero.rs  left_shift.rs  lib.rs  main.rs  multiplication.rs  negate.rs  new.rs  print_internal.rs  random.rs  right_shift.rs  sign.rs  size.rs  size_base.rs  (+7 more)
arbi/src/builtin_int_methods/: abs.rs  abs_diff.rs  count_ones.rs  count_zeros.rs  div_ceil.rs  div_floor.rs  euclid_div_and_rem.rs  from_bytes.rs  ilog.rs  ilog10.rs  ilog2.rs  is_multiple_of.rs  is_positive_is_negative.rs  is_power_of_two.rs  isqrt.rs  leading_ones.rs  mod.rs  next_multiple_of.rs  reverse_bits.rs  signum.rs  swap_bytes.rs  to_bytes.rs  trailing_ones.rs  trailing_ones_and_zeros.rs  trailing_zeros.rs
arbi/src/doc/: mod.rs  tour.md  tour.rs
arbi/src/docs/: algorithms.rs  mod.rs  tour.md  tour.rs
arbi/src/fmt/: binary.rs  display.rs  hex.rs  mod.rs  octal.rs
arbi/src/macros/: mod.rs
arbi/src/ops/: mod.rs
arbi/src/ops/add/: arbi_x_arbi.rs  arbi_x_int.rs  impls.rs  mod.rs  test.rs
arbi/src/ops/add/util/: mod.rs
arbi/src/ops/bit/: arbi_x_arbi.rs  arbi_x_int.rs  impls.rs  mod.rs
arbi/src/random/: mod.rs  random_arbi.rs  uniform_sampler.rs
arbi/src/util/: arbi_like_array.rs  float.rs  integer_to_digit_array.rs  max_digits.rs  mod.rs  mul.rs  qdigit.rs  radix_info.rs  test.rs  to_digits.rs  view.rs
examples/fibonacci/: Cargo.toml  README.md
examples/fibonacci/src/: main.rs
