[package]
authors = ["Owain Davies"]
categories = [
    "algorithms",
    "data-structures",
    "mathematics",
    "no-std",
]
description = "Arbitrary precision integer."
edition = "2021"
keywords = [
    "arbitrary-precision",
    "bigint",
    "bignum",
    "integer",
]
license = "Apache-2.0 OR MIT"
name = "arbi"
readme = "README.md"
repository = "https://github.com/OTheDev/arbi"
version = "0.4.1"
rust-version = "1.60"

[dependencies]

[dev-dependencies]
rand = { version = "0.8.5", features = ["std_rng"] }

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./doc/header.html"]

[features]
nightly = [] # for nightly bench, dev only
