[package]
authors = ["Owain Davies"]
categories = [
    "algorithms",
    "data-structures",
    "mathematics",
    "no-std",
]
description = "Arbitrary Precision Integer"
edition = "2021"
keywords = [
    "arbitrary-precision",
    "bigint",
    "bignum",
    "integer",
]
license = "Apache-2.0 OR MIT"
name = "arbi"
readme = "README.md"
repository = "https://github.com/OTheDev/arbi"
version = "0.6.2"
rust-version = "1.65"

[dependencies]
rand = { version = "0.8.5", optional = true }

[dev-dependencies]
rand = { version = "0.8.5", features = ["std_rng"] }

[package.metadata.docs.rs]
# RUSTDOCFLAGS="--html-in-header ./arbi/doc/header.html --cfg docsrs" cargo +nightly doc --no-deps --all-features
rustdoc-args = ["--html-in-header", "./doc/header.html", "--cfg", "docsrs"]
all-features = true

[features]
std = [] # for std::error::Error implementations only
rand = ["dep:rand"] # for random number generation
nightly = [] # for nightly bench, dev only
